finished endpoints except those that rely on date/year
