# python-flask-server/swagger_server/__init__.py
@@ -10,7 +10,8 @@ import glob
 import re
 from datetime import datetime
 
-# we only support the ros-e_m_a_c-spice-6-v1.0 directory for rosetta, there is another, but it isnt used to populate the db
+# we only support the ros-e_m_a_c-spice-6-v1.0 directory for rosetta, there is another that exists in the naif db, 
+# but it isnt used to populate our spicedb as we dont expect users to use that directory
 missions_readable = {   "clem1-l-spice-6-v1.0"       : "clementine",
                         "co-s_j_e_v-spice-6-v1.0"    : "cassini_orbiter",
                         "dawn-m_a-spice-6-v1.0"      : "dawn",
@@ -96,7 +97,7 @@ def populate_spicedb():
             # full split format will be: ['', 'spicedata', 'clem1-l-spice-6-v1.0', 'clsp_1000', 'data', 'ck']
             split = root.split('/') 
             # not sure how this will react to having both rosettas...
-            if len(split) >=6 and (split[4] in ['data', 'extras']): # we only care about kernel and mk files, which are always 4 dirs down 
+            if len(split)>=6 and (split[5] in ['ck', 'ek', 'fk', 'spk', 'sclk', 'lsk', 'ik', 'pck', 'mk']): # we only care about kernel and mk files, which are always 4 dirs down 
 
                 # issue: cant be sure that the -info.txt file will read first.... print could happen in the middle of the kernel directory
                 if name.endswith('info.txt'): # we can expect a single ckinfo.txt, mkinfo.txt, etc in every kernel directory
@@ -106,6 +107,11 @@ def populate_spicedb():
                 fhash = farmhash.hash64(str(io.open(root+'/'+name,'rb').read())) # spice data encoding is mixed, so read as binary
                 c.execute("INSERT OR IGNORE INTO SPICE (Mission, Kernel, File, Path, Hash, Newest) VALUES ('{mn}', '{kn}', '{fn}', '{fp}', '{fh}', '{new}')"
                           .format(mn=missions_readable[split[2]], kn=split[5], fn=name, fp=root, fh=fhash, new=newest))
+            # misc files    
+            elif len(split) >= 4:
+                fhash = farmhash.hash64(str(io.open(root+'/'+name,'rb').read())) # spice data encoding is mixed, so read as binary
+                c.execute("INSERT OR IGNORE INTO SPICE (Mission, Kernel, File, Path, Hash, Newest) VALUES ('{mn}', 'misc', '{fn}', '{fp}', '{fh}', '{new}')"
+                          .format(mn=missions_readable[split[2]], fn=name, fp=root, fh=fhash, new=name))
             
     conn.commit()
     conn.close()
