# python-flask-server/swagger_server/controllers/metakernels_controller.py
@@ -3,10 +3,10 @@ import six
 
 from swagger_server.models.filelist import Filelist  # noqa: E501
 from swagger_server.models.raw import Raw  # noqa: E501
-from swagger_server import util
+from swagger_server import util, sqlselect_command
 
 
-def get_metakernel_dict(mission, file):  # noqa: E501
+def get_metakernel_info(mission, file):  # noqa: E501
     """Hash, Path and Links for a given metakernel file
 
      # noqa: E501
@@ -18,7 +18,16 @@ def get_metakernel_dict(mission, file):  # noqa: E501
 
     :rtype: List[Filelist]
     """
-    return 'do some magic!'
+    rows = sqlselect_command("SELECT * FROM SPICE WHERE Mission='{mn}' AND Kernel='mk' AND File='{fn}'".format(mn=mission, fn=file))
+    if rows == []:
+        return "Unable to find a file that matches mission ["+mission+"], kernel [mk], and filename ["+file+"]."
+    file_info = sqlselect_dict(rows[0]) # there should only be one possible return for a select like this. if we want to catch edge cases, we can add sqlselect_dictarray(rows)
+
+    file_info["links"] = []
+    if file.endswith(('.lbl', '.txt')):
+        file_info["links"].append("/raw")
+        
+    return file_info
 
 
 def get_metakernels(mission):  # noqa: E501
@@ -31,7 +40,9 @@ def get_metakernels(mission):  # noqa: E501
 
     :rtype: List[Filelist]
     """
-    return 'do some magic!'
+    rows = sqlselect_command("SELECT * FROM SPICE WHERE Mission='{mn}' AND Kernel='mk'".format(mn=mission))
+    files = [row[2] for row in rows]
+    return files
 
 
 def get_mk_newest(mission):  # noqa: E501
@@ -59,7 +70,16 @@ def get_mk_raw(mission, file):  # noqa: E501
 
     :rtype: List[Raw]
     """
-    return 'do some magic!'
+    if not file.endswith(('.lbl', '.txt')): # TODO create a longer list of acceptable file exensions in __init__ and include it in each controller?
+        return "We do not current support raw display for files not ending with a '.lbl' or a '.txt' extension."
+
+    rows = sqlselect_command("SELECT * FROM SPICE WHERE Mission='{mn}' AND Kernel='mk' AND File='{fn}'".format(mn=mission, fn=file))
+    if rows == []:
+        return "Unable to find a file that matches mission ["+mission+"], kernel [mk], and filename ["+file+"]."
+
+    path = rows[0][3] # we shouldnt ever have more than one file that would match the query, so we should? be fine directly indexing zero
+    file = io.open(path+'/'+file, 'r').readlines()
+    return file
 
 
 def get_mk_year(mission, year):  # noqa: E501
