# python-flask-server/swagger_server/controllers/missions_controller.py
@@ -4,7 +4,7 @@ import six
 from swagger_server.models.endpoints import Endpoints  # noqa: E501
 from swagger_server.models.filelist import Filelist  # noqa: E501
 from swagger_server.models.missions import Missions  # noqa: E501
-from swagger_server import util, missions_true
+from swagger_server import util, missions_true, sqlselect_command, sqlselect_dataframe
 
 
 def get_home_naif():  # noqa: E501
@@ -34,10 +34,12 @@ def get_misc(mission):  # noqa: E50
 
     :rtype: List[Filelist]
     """
-    return
+    rows = sqlselect_command("SELECT * FROM SPICE WHERE Mission='{mn}' AND Kernel='misc'".format(mn=mission,))
+    files = [row[2] for row in rows]
+    return files
 
 
-def get_mission_endpoints(mission):  # noqa: E501
+def get_mission_info(mission):  # noqa: E501
     """List of the available endpoints for a given mission
 
      # noqa: E501
@@ -47,7 +49,15 @@ def get_mission_endpoints(mission):  # noqa: E501
 
     :rtype: List[Endpoints]
     """
-    return 'do some magic!'
+    rows = sqlselect_command("SELECT * FROM SPICE WHERE Mission='{mn}'".format(mn=mission))
+    if rows == []:
+        return "Unable to find a match for mission ["+mission+"]."
+    df = sqlselect_dataframe(rows)
+    mission_info = {'mission' : mission,
+                    'hash'    : farmhash.hash64(str(df.values)),
+                    'links'   : ["/files", "/misc"]}
+
+    return mission_info
 
 
 def get_missions():  # noqa: E501
