# python-flask-server/swagger_server/controllers/sync_controller.py
@@ -1,9 +1,10 @@
 import connexion
 import six
+import os
+from flask import jsonify
 
 from swagger_server.models.update import Update  # noqa: E501
-from swagger_server import util
-
+from swagger_server import util, configure
 
 def get_ssh_key(user):  # noqa: E501
     """Returns public SSH key
@@ -15,7 +16,7 @@ def get_ssh_key(user):  # noqa: E501
 
     :rtype: List[Update]
     """
-    return 'do some magic!'
+    return jsonify(SSH = os.popen('cat /root/.ssh/id_rsa.pub').read())
 
 
 def list_nodes():  # noqa: E501
@@ -26,10 +27,11 @@ def list_nodes():  # noqa: E501
 
     :rtype: object
     """
-    return 'do some magic!'
+    users, ip, filepath = configure()
+    return jsonify(Nodes = users)
 
 
-def next_places(user):  # noqa: E501
+def user_update_endpoints(user):  # noqa: E501
     """List of the next available endpoints for a given node
 
      # noqa: E501
@@ -39,7 +41,8 @@ def next_places(user):  # noqa: E501
 
     :rtype: List[Update]
     """
-    return 'do some magic!'
+    endpoints = ['/ssh', '/sync']
+    return endpoints
 
 
 def sync_nodes(user):  # noqa: E501
@@ -52,4 +55,17 @@ def sync_nodes(user):  # noqa: E501
 
     :rtype: List[Update]
     """
-    return 'do some magic!'
+    users, ip, filepath = configure()
+    users_info = make_user_ip_filepath_dict(users, ip, filepath)
+
+    rsync(users_info['Home'][1], user, users_info[user][0], users_info[user][1])
+    return("SYNCED " + users_info['Home'][1] + " " + "and" + " " + users_info[user][1])
+
+
+def rsync(SRC, USER, IP, DEST):
+    os.system("rsync -avP {}@{}:{} {}".format(USER, IP, DEST, SRC))
+
+
+def make_user_ip_filepath_dict(user, ip, filepath):
+    zipped = list(zip(ip, filepath))
+    return dict(zip(user, zipped))
